--- a/src/main/resources/templates/admin/edit.html
+++ b/src/main/resources/templates/admin/edit.html
@@ -26,8 +26,10 @@
     <br/>
     <label for="email">Enter email: </label>
     <input type="text" th:field="*{email}" id="email"/>
+    <br/>
 
-
+<!--    <label for="role">Enter role: </label>-->
+<!--    <input type="text" th:field="*{role}" id="role"/>-->
     <br/>
     <input type="submit" value="Save changes"/>
 </form>
